<resources>
    <string name="app_name">MOTTOACIL</string>
    <string name="textview">KAYIT OLUŞTURULDU</string>
    <string name="todo">TODO</string>
    <string name="button">Giriş/Kayıt Yap</string>
    <string name="email">Mailinizi Giriniz</string>
    <string name="img">İMG</string>
    <string name="text">HOŞ GELDİNİZ</string>
    <string name="button2">Devam Etmek İçin Basınız</string>
    <string name="todo2">TODO2</string>
    <string name="todo4">TODO</string>
    <string name="title_activity_motto_acil3">MottoAcil3</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="imgbutton">------</string>
    <string name="todo5">TODO</string>
    <string name="todo7">TODO</string>
    <string name="Button7">Arama Yapmak İçin Tıklayınız</string>
    <string name="todo09">TODO</string>
    <string name="eczanebutton">Eczane aratmak için tıklayınız</string>
    <string name="İlaç">Dideral</string>
    <string name="Açıklama">Dideral (propranolol) ilaç, stres hormonlarının aşırı salınımını engelleyerek kan damarlarını gevşetir,.</string>
    <string name="todo88">TODO</string>
    <string name="todo99">TODO</string>
    <string name="sepet">Sepete Ekle</string>
    <string name="Fiyat">85.99$</string>
    <string name="Sipariş">Siparişi Veriniz</string>
    <string name="Tebrikler">Geçmiş Olsun</string>
    <string name="ana">Ana Sayfaya Dönünüz</string>
    <string name="todo234">TODO</string>
    <string name="btnn">Kayıt Ol</string>
    <string name="title_activity_motto_acil_map">MottoAcilMap</string>
    <string name="şifre">Şifrenizi Giriniz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="mail">Email</string>
    <string name="button33">Kayıt Ol</string>
    <string name="isim">İsim</string>
    <string name="soyisim">Soy İsim</string>
    <string name="İsim">--------</string>
    <string name="Soyİsim">----------</string>
    <string name="name">Konum Bilgisi</string>
    <string name="Harita">Harita</string>
    <string name="Devam">Devam Et</string>
    <string name="imgbtn">Eczane</string>
    <string name="button12">Arama</string>
    <string name="todoeczane">TODO</string>
    <string name="todoeczane1">TODO</string>
    <string name="todoEczane2">TODO</string>
    <string name="ara">Gir</string>
    <string name="Ara">Giriniz</string>
    <string name="todoeczane3">TODO</string>
    <string name="todoeczanegiri">TODO</string>
    <string name="İlaçAra">İlaç Arayınız</string>
    <string name="İlaçİsmi">DİDERAL</string>
    <string name="Sepet">Sepete Ekle</string>
    <string name="favori">*Favori İlaçlar*</string>
    <string name="İlaç2">FOLBİOL</string>
    <string name="Sepet2">Sepete ekle</string>
    <string name="İlaç3">ARVELES</string>
    <string name="Sepet3">Sepete Ekle</string>
    <string name="todoSepet">TODO</string>
    <string name="todoresim">TODO</string>
    <string name="SepettekiÜrün">Sepette bulunan ürünler</string>
    <string name="todoALVERES">TODO</string>
    <string name="Ödeme">Ödemeye geç</string>
    <string name="tododideral">TODO</string>
    <string name="Konum">Konumuzunu doğrulayınız</string>
    <string name="todoMap">TODO</string>
    <string name="toplamtutar">Tutar 85.99</string>
    <string name="Dahafazlaürün">Sepete bir kaç ürün daha ekle</string>
    <string name="todoilaaç">TODO</string>
    <string name="ödeme">Ödeme yöntemi</string>
    <string name="radiobutton">Kapıda Nakit\n</string>
    <string name="radiobutton2">Kapıda Kredi Kartı\n</string>
    <string name="Siparişitamamla">SİPARİŞİ TAMAMLA</string>
    <string name="todofOLBİ">TODO</string>
    <string name="tododide">TODO</string>
    <string name="todokapanış">TODO</string>
    <string name="Kapanış">Siparişiniz oluşturulmuştur sağlıklı günler dileriz</string>
    <string name="todoKONUM">TODO</string>
    <string name="LOGO">TODO</string>
    <string name="Eczanesayfası">Eczane menüsüne dönebilirsiniz</string>
</resources>