<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MottoAcilEczaneListesi">

    <ImageView
        android:id="@+id/NöbetçiEczane"
        android:layout_width="380dp"
        android:layout_height="156dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todoEczane2"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_3658" />

    <Button
        android:id="@+id/button2"
        android:layout_width="177dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="300dp"
        android:background="@color/black"
        android:text="@string/ara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="388dp"
        android:layout_height="244dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todoKONUM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngtree_flat_red_location_sign_png_image_8927579" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="214dp"
        android:layout_height="176dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/varlk_1"
        android:contentDescription="@string/LOGO" />

</androidx.constraintlayout.widget.ConstraintLayout>