<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MottoAcilSepet2">

    <TextView
        android:id="@+id/ilaçisim"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_marginBottom="44dp"
        android:text="@string/İlaç2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/button14"
        android:layout_width="107dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Dahafazlaürün"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#C5E1A5"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toEndOf="@+id/button11"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="197dp"
        android:layout_height="104dp"
        android:layout_marginBottom="272dp"
        android:contentDescription="@string/tododideral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/katman_2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="368dp"
        android:layout_height="198dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todoresim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/propranolol_enantiomers" />

    <Button
        android:id="@+id/button11"
        android:layout_width="222dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:text="@string/Ödeme"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9E80"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#FD0404"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/İlaçİsmi"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_marginStart="240dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="312dp"
        android:text="@string/İlaç3"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,UnknownIdInLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="318dp"
        android:layout_height="108dp"
        android:layout_marginTop="24dp"
        android:text="@string/SepettekiÜrün"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="198dp"
        android:layout_height="94dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todofOLBİ"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/katman_15"
        tools:ignore="MissingConstraints,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>