<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="@drawable/__zcemhawndyrha3fp"
    android:foregroundGravity="top|center"
    tools:context=".MottoAcil0">

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="364dp"
        android:layout_height="56dp"
        android:layout_marginBottom="316dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/şifre"
        android:inputType="textPassword"
        android:textColor="#FF0000"
        android:textColorHint="#546E7A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="364dp"
        android:layout_height="56dp"
        android:layout_marginBottom="212dp"
        android:text="@string/button33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="364dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>